[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GFX/Interface/panel_woodPaperDetail.png" type="Texture" id=2]
[ext_resource path="res://Interface/PauseMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Popup/CenterContainer"]
margin_left = 90.0
margin_top = 150.0
margin_right = 390.0
margin_bottom = 650.0
rect_min_size = Vector2( 300, 500 )
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Popup/CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 93.0
margin_right = 276.0
margin_bottom = 123.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.541176, 0.741176, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.741176, 0.0980392, 1 )
custom_colors/font_color_pressed = Color( 0.541176, 0.741176, 0.0980392, 1 )
text = "Continue"

[node name="RestartButton" type="Button" parent="Popup/CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 223.0
margin_right = 276.0
margin_bottom = 253.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.541176, 0.741176, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.741176, 0.0980392, 1 )
custom_colors/font_color_pressed = Color( 0.541176, 0.741176, 0.0980392, 1 )
text = "Restart"
__meta__ = {
"_editor_description_": ""
}

[node name="ExitButton" type="Button" parent="Popup/CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 353.0
margin_right = 276.0
margin_bottom = 383.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.541176, 0.741176, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.741176, 0.0980392, 1 )
custom_colors/font_color_pressed = Color( 0.541176, 0.741176, 0.0980392, 1 )
text = "Exit game"
[connection signal="pressed" from="Popup/CenterContainer/NinePatchRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/NinePatchRect/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/NinePatchRect/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
